--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/galsim/learnES6Project#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0"
